@@ -1,3 +1,10 @@
+2009-11-11  Gary Benson  <gbenson@redhat.com>
+
+	* ports/hotspot/src/cpu/zero/vm/entry_zero.hpp 
+	(ZeroEntry::entry_point): Inlined.
+	(ZeroEntry::invoke): Likewise.
+	(ZeroEntry::invoke_osr): Likewise.
+
 2009-11-09  Xerxes Rånby  <xerxes@zafena.se>
 
 	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp,
